cmake_minimum_required(VERSION 3.8)
project(arm_controllers)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(controller_interface REQUIRED)
find_package(urdf REQUIRED)
find_package(control_msgs REQUIRED)
find_package(kdl_parser REQUIRED)
find_package(pluginlib REQUIRED)
find_package(rclcpp_lifecycle REQUIRED)
find_package(realtime_tools REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(moveit_ros_planning_interface REQUIRED)
find_package(moveit_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(tf2 REQUIRED)
find_package(tf2_geometry_msgs REQUIRED)

add_library(${PROJECT_NAME} SHARED
  src/joint_velocity_example_controller.cpp
  src/joint_position_example_controller.cpp
  src/joint_impedance_example_controller.cpp
  src/time_delay_controller.cpp
  src/computed_torque_controller.cpp
)

target_include_directories(${PROJECT_NAME} PRIVATE
  include
)

ament_target_dependencies(${PROJECT_NAME}
  controller_interface
  rclcpp
  rclcpp_lifecycle
  realtime_tools
  urdf
  control_msgs
  kdl_parser
  pluginlib
  sensor_msgs
)

# MoveIt Pick & Place Node
add_executable(moveit_pick_place_node src/moveit_pick_place_node.cpp)

ament_target_dependencies(moveit_pick_place_node
  rclcpp
  moveit_ros_planning_interface
  geometry_msgs
  sensor_msgs
  tf2
  tf2_geometry_msgs
  moveit_msgs
)

install(TARGETS ${PROJECT_NAME}
  ARCHIVE DESTINATION lib
  LIBRARY DESTINATION lib
  RUNTIME DESTINATION bin
)

# Install MoveIt node
install(TARGETS moveit_pick_place_node
  DESTINATION lib/${PROJECT_NAME}
)

install(DIRECTORY include/
  DESTINATION include
)

install(FILES controllers_plugin.xml
  DESTINATION share/${PROJECT_NAME}
)

pluginlib_export_plugin_description_file(controller_interface controllers_plugin.xml)

ament_export_dependencies(
  controller_interface
  rclcpp
  rclcpp_lifecycle
  realtime_tools
  sensor_msgs
)

ament_export_include_directories(
  include
)

ament_export_libraries(
  ${PROJECT_NAME}
)

ament_package()
